base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi
spec:
  selector:
    matchLabels:
      app: restapi
  replicas: 1
  template:
    metadata:
      labels:
        app: restapi
    spec:
      containers:
      - name: restapi
        image: image-registry.openshift-image-registry.svc:5000/restapi/development-restapi
