base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
spec:
  selector:
    app: restapi
  ports:
    - name: http
      port: 8080
  type: ClusterIP
