base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: restapi
  namespace: restapi
spec:
  path: /
  to:
    kind: Service
    name: restapi-service
  port:
    targetPort: 8080
